================
 Change history
================

.. contents::
    :local:

.. _version-3.1.1:

3.1.1
=====
:release-date: 2013-11-11 XX:XX X.X UTC

- Fixed Python 3 compatibility problems.

    Fix contributed by Anton Novosyolov.

- Fixed compatibility with Django pre 1.6 (Issue #285).

- celerycam: Fixed error when expire function returned None (Issue #210)

- DatabaseScheduler: Now automatically disables periodic task
  if the schedule model it was connected is deleted (Issue #208).

- Test runner now sets always eager settings on the app configuration.
  (Issue #201).

- TaskRunnerStoringResults stored results in the wrong table.

    Fix contributed by Charlie DeTar.

- Celerycam: Fixed problem when USE_TZ not enabled.

    Fix contributed by Jens Alm

- Celerycam: Fixed timezone problem with expires and eta
  (Issue #275 + Issue #153).

    Fix contributed by Alvaro Vega.

- find_related_module now handles import errors (Issue #226).

.. _version-3.1.0:

3.1.0
=====
:release-date: 2013-11-10 1:04 A.M UTC

.. note::

    Please test this release in staging first and
    make sure you read the Celery 3.1 changelog at:

    http://docs.celeryproject.org/en/latest/whatsnew-3.1.html

    If you upgrade from an old version then you must also
    double check that you have 'djcelery.setup_loader()'
    in your settings.py!

- Tests passing on Django 1.6

- Now works with Celery 3.1

.. _version-3.0.23:

3.0.23
======
:release-date: 2013-09-03 02:00 P.M BST

- Now depends on celery 3.0.23

- ``djcelery.contrib.test_runner`` used naive datetimes
  resulting in ``RuntimeWarning`` (Issue #242).

- Cache backend now compatible with Django 1.5.

    Fix contributed by Weipin Xia.

- DatabaseScheduler: Periodic task admin form now validates args and kwargs.

    Contributed by Justin Quick.

- DatabaseScheduler: IntervalSchedule and CrontabSchedule will now be ordered
  in a more natural way.

    Contributed by Eugene Nagornyi.
