@@ -7,4 +7,4 @@ all_files = 1
 upload-dir = docs/.build/html
 
 [bdist_rpm]
-requires = celery >= 3.1
+requires = celery >= 3.1.1
